# spectrena

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/scripts/: create-release-packages.py
src/spectrena/: __init__.py  backlog.py  config.py  new.py  update.py  worktrees.py
src/spectrena/lineage/: __init__.py  db.py  migrations.py
templates/: backlog-template.md  spectrena-gitignore
templates/commands/: analyze.md  clarify.md  constitution.md  discover.md  implement.md  plan.md  review-updates.md  spec.finish.md  specify.md  tasks.md
