[project]
name = "spectrena"
version = "0.2.0"
description = "Spec-Driven Development (SDD) backed by Serena, with added configuration and lineage tracking."
requires-python = ">=3.11"
dependencies = [
  "typer",
  "rich",
  "httpx",
  "platformdirs",
  "readchar",
  "truststore",
  "gitpython>=3.1.45",
]

[project.scripts]
spectrena = "spectrena:main"
sw = "spectrena.worktrees:main"
spectrena-mcp = "spectrena.lineage.server:main"

[project.optional-dependencies]
lineage = ["fastmcp"]
lineage-surreal = ["fastmcp", "surrealdb"]
dev = ["pytest", "pytest-cov", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectrena"]
